fix: code block extra padding in mobile device

--- a/source/css/_common/highlight.styl
+++ b/source/css/_common/highlight.styl
@@ -25,6 +25,9 @@ p>code:not([class]),li>code:not([class])
   position: relative
   overflow: auto
   display: block
+  margin-left: 0
+  margin-right: 0
+  
   figcaption
     color: var(--text-p2)
     font-size: $fs-codeblock
